--- a/index.html
+++ b/index.html
@@ -92,12 +92,18 @@
                 </div> -->
 
             </div>
-
             <div class="container_info">
                 <div class="svg_container">
                     <img src="./img/post_card.svg" alt="post_card" >
                 </div>
+               
                 <div class="label_container">
+                    <img src="./img/label group.svg" alt="">
+                </div>
+            </div>  
+        </div>
+
+         <!-- <div class="label_container">
                     <div class="first_row">
                         <span class="first_label">Go Social on Tsow</span>
                         <span class="second_label">Earn Coins!</span>
@@ -106,9 +112,8 @@
                         <span class="third_label">Discover Opportunities</span>
                         <span class="forth_label">Enjoy Exclusive Benefits!</span>
                     </div>
-                </div>
-            </div>  
-        </div>
+                </div> -->
+
 
         <!-- embedded video -->
         <!-- <div class="iframe-container ">
