--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </p>
                         <form>
                             <label  class="account_label">Enter Your Mobile Number to create account</label><br>
-                            <input id='mobileno' type="number" class="mobileno input-box"  placeholder="Enter 10 Digit Mobile Number:">
+                            <input id='mobileno' type="number" class="mobileno input-box"  placeholder="+91 XXXX XXXX XX">
                             <div id="mobileError" class="error_message"></div>
                             <br>
                         </form>
