--- a/Member.html
+++ b/Member.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="otp-content">
@@ -17,7 +18,8 @@
         <p class="member_text">You are now a member on the 
             Tsow-Network.</p><br /><br />
           <a href='index.html'><button id="mobileButton" type="submit" >Go To Home Page</button></a>
+          <div class="member_text">Redirecting in&nbsp;<span class="seconds-num"></span>s</div>
       </div> 
-    
+    <script src="./js/member.js"></script>
 </body>
 </html>
