--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class="bubble_max">
                             <div class="bubble3_container">
                                 <img src="./img/bubble3.svg" class="bubble3" alt="">
-                                <!-- <p class="container_heading">Discover Opportunites</p> -->
+                                <p class="container_heading_row2">Discover Opportunites</p>
                                 <span class="container_subheading">Discover business & professional opportunities & latest trends through a brand new experience.</span>
                                 <img src="./img/ask_corner.svg" class="ask_corner" alt="">
                             </div>
@@ -251,7 +251,7 @@
                         <div class="bubble_max">
                             <div class="bubble4_container">
                                 <img src="./img/bubble4.svg" class="bubble4" alt="">
-                                <!-- <p class="container_heading"> Increase Brand Value</p> -->
+                                <p class="container_heading"> Increase Brand Value</p>
                                 <span class="container_subheading">Get access to Digital Spaces to feature yourself & your company at the prime spots of the App.<br /><br />
                                     Be an influencer of your domain!</span>
                                 <img src="./img/growth.png" class="growth" alt="">
